# Terminal

./: .env.example  .gitignore  01_产品需求文档.md  02_系统架构文档.md  03_项目开发文档.md  04_核心模块设计.md  05_测试与运维手册.md  README.md  pyproject.toml  任务划分.md
.claude/skills/aionui-config/: SKILL.md
.claude/skills/aionui-config/scripts/: aionui_api.py
config/: mcp_servers.yaml
src/: __init__.py  exceptions.py
src/agent_core/: __init__.py  agent.py  graph.py  message.py  prompts.py  protocol.py  protocols.py  types.py
src/config/: __init__.py  config_loader.py  settings.py
src/llm/: __init__.py  base.py  chat_model.py  echo_provider.py  faux_provider.py  langchain_adapter.py  mcp_client.py  message_adapter.py  provider_adapter.py  registry.py
src/mcp/: __init__.py  adapter.py  client.py  config_loader.py  registry.py  router.py
src/tools/: __init__.py  base.py  base_tool.py  description.py  file_tools.py  llm_tools.py
tests/architecture/: dependency_test.py  protocol_test.py
tests/fixtures/: mcp_stdio_server.py
tests/integration/mcp/: test_stdio_client.py
tests/unit/agent_core/: test_graph.py  test_message.py  test_protocols.py  test_state.py
tests/unit/config/: test_settings.py
tests/unit/llm/: test_faux_provider.py  test_message_adapter.py
tests/unit/mcp/: test_config_and_router.py
tests/unit/tools/: test_file_tools.py
